tests/fixtures/invalid/empty_purpose.ko
module empty_purpose {
    meta {
        purpose: "",
        version: "0.1.0"
    }

    fn main() {
    }
}
